--- a/Punjabi Relations.html
+++ b/Punjabi Relations.html
@@ -2,7 +2,18 @@
 <html>
     <head>
         <title>Punjabi Relations</title>
-        <link rel="stylesheet" href="Punjabi Relations.css">
+        <link rel="stylesheet" href="/css/Punjabi%20Relations.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <!--<link href="/css/PunjabiFont.css">-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133824440-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-133824440-1');
+        </script>
     </head>
     <body>
         <div id = "intro" style>
@@ -16,7 +27,7 @@
         </div>
         <div>
             <p>This website is designed to illustrate and organize the names of relationships used within a traditional Punjabi family.
-                In order to find and translate each family member, simply hover over that name and you will see the translation immediately. You can also click on the names to be shown more information about them.</p>
+                In order to find and translate each family member, simply hover over that name and you will see the translation immediately. You can also scroll down or click on the names to reveal more information about them.</p>
             <p>(Note: Since there is no translation for cousin, treat him/her as your sibling)</p>
         </div>
         <br>
@@ -579,7 +590,6 @@
                 </button>
             </div>
         </div> -->
-        
         
         <br><br><br><br><br><br><br><br><br><br><br>
         <h2 align = "center">Table of Relationships</h2>
